# libnest2d

./: .gitignore  SUBIR-GITHUB.md
nest-local/: .dockerignore  .env.do.example  DEPLOY-DROPLET-INFO.md  README.md  buildspec.yml  deploy-do.sh  docker-compose.do.spaces.yml  docker-compose.do.yml  docker-compose.yml  elasticmq.conf
nest-local/benchmark/: README.md  run_benchmark.py
nest-local/benchmark/cases/: few_large.json  irregular_L.json  many_small.json  mixed.json  rectangles.json
nest-local/benchmark/configs/: max_quality.yaml
nest-local/docs/: BUILD-AWS.md  PASSO-A-PASSO-AWS.md  PASSO-A-PASSO-DIGITALOCEAN.md  PLANO-AWS.md  REFATORACAO-DIGITALOCEAN.md  STATUS-DROPLET.md
nest-local/scripts/: create_table_remote.sh  healthcheck-do.sh  init_minio.sh  seed_ddb.sh
nest-local/services/api/: Dockerfile  app.py  requirements.txt
nest-local/services/engine/: CMakeLists.txt  Dockerfile  main.cpp
nest-local/services/init/: Dockerfile  init_infra.py
nest-local/services/nginx/: nginx.conf
nest-local/services/worker/: Dockerfile  worker.py
plans/: analise-completa-e-melhorias.md  analysis-and-improvements.md
src/lib/: libnest2d-api.ts
